JG-2004-02-03-0: Testsuite: Fixed test functional/access_lists.
                            Enhancements and bugfixes in the handling of cluster
                            queues.

AD-2004-02-03-0: Bugfix:    Did add event handler for 'TYPE_JOB_RESEND_EVENT'
                 Changed:   qmaster
                 Review:    EB

MD-2004-02-03-0: Bugfix:    - Text
                            - fixed install_qmaster, install_execd
                 Changed:   - inst_sgeee

SG-2004-02-03-0: Bugfix:    - added the user id to the qdel error messages.
                            - some code cleanup
                 Changed:   qmaster
                 Review:    JG

CR-2004-02-03-1: Bugfix:    Fixed build for tru64 
                            (no prototype for "sge_get_execd_port()")

CR-2004-02-03-0: Testsuite: HTML compile output links of compile output HTML file
                            are now relative to HTML-directory.

MD-2004-02-02-2: Bugfix:    - Text 
                 Changed:   - inst_sgeee 

MD-2004-02-02-1: Bugfix:    - renamed sge_config to inst_sgeee
                            - moved sge_config_modules to util/inst_sgeee_modules
                            - adaptions of distinst 
                 Changed:   - sge_config, distinst

SG-2004-01-02-1: Bugfix:    reverted the changes from SG-2004-02-01-0. Reopend
                            the issue 476 again.

AD-2004-02-02-0: Cleanup:   qmaster threads now do call 'sge_qmaster_thread_
                            init()' at the beginning.
                 

MD-2004-02-02-0: Bugfix:    - DB installation 
                            - Test for local fs, new archs 
                            - Text
                 Changed:   - sge_config

CR-2004-02-02-0: Bugfix:    Fixed problem "can't get communication handle" when
                            application calls check_isalive() before a communication
                            handle is created. Now all communication handle are